fix: adding scrollbar

--- a/pages/global.css
+++ b/pages/global.css
@@ -131,7 +131,6 @@ main {
   overflow: auto;
   --scrollbar-width: 12px;
   --scrollbar-thumb-colour: linear-gradient(var(--primary-colour), var(--trinary-colour));
-  --scrollbar-thumb-solid-colour: var(--primary-colour);
   --scrollbar-track-colour: var(--panel-bg-colour);
 
   nav {
@@ -245,12 +244,6 @@ main {
       scrollbar-color: var(--scrollbar-thumb-colour) var(--scrollbar-track-colour);
       scrollbar-width: var(--scrollbar-width);
     }
-
-    @supports not (background: linear-gradient(#000, #FFF)) {
-      & {
-        scrollbar-color: var(--scrollbar-thumb-solid-colour) var(--scrollbar-track-colour);
-      }
-    }
   }
   
   @supports selector(::-webkit-scrollbar) {
@@ -269,12 +262,6 @@ main {
 
     &::-webkit-scrollbar-corner {
       background-color: var(--scrollbar-track-colour);
-    }
-
-    @supports not (background: linear-gradient(#000, #FFF)) {
-      &::-webkit-scrollbar-thumb {
-        background-color: var(--scrollbar-thumb-solid-colour);
-      }
     }
   }
 }
